# crystals-teach

./: CMakeLists.txt
.github/workflows/: main.yml  nightly-cleanup.yml
bits/: CMakeLists.txt
crystals/: control.F  crystals-cl.F  crystals.F  guibit.F  link.F  lists3.F  read.F  specific.F
datafiles/: commands.src  crystals.ssr  infotabs.ssr  maintoolbar.ssr  menu-graphics.ssr  menu-help.ssr  menu-solve.ssr
gui/: cccontroller.cpp  crystalsinterface.h
precomp/all/demo/teach/cuoac/: cuoac.hkl  cuoac.ins
precomp/all/demo/teach/moco3py3/: GUPMOT.cif
precomp/all/demo/teach/moco6/: 1049704_MoCO.hkl  1049704_MoCO.res
precomp/all/demo/teach/para/: para.cif
script/: tabreset.ssc  xfriedel.ssc  xteach.ssc  xteachi.ssc  xteachstart.ssc
test_suite/INW_OMP.org/: bigsfls.out  hydro.out  td-part.out  test3.out  tls.out
test_suite/LINUXGH.org/: bigsfls.out  td-part.out
test_suite/LINUXGHGUI.org/: bigsfls.out  td-part.out  test3.out
test_suite/MIN64GH.org/: bigsfls.out  flack.out  hydro.out  layers.out  sgd464.out  test-rest.out  test2.out  test3.out
test_suite/MIN64GHGUI.org/: bigsfls.out  shapering.out  test3.out
